<resources>
    <string name="app_name">TheMovieDB</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="null_binding">View was not created</string>
    <string name="popular">Popular</string>
    <string name="toprated">Top Rated</string>
    <string name="upcoming">Upcoming</string>
    <string name="search">Search</string>
    <string name="connection_retry">No internet connection. Make sure Wi-Fi or cellular data is turned on, then try again.</string>
    <string name="young">18+</string>
    <string name="actors_and_creators">Actors and Creators</string>
    <string name="languages">Languages:</string>
</resources>