<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundMainColor"
    tools:context=".presentation.ui.screens.movie_details.MovieDetailFragment">


    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="@color/transparent_a"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_7sdp"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_baseline_arrow_back" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_18ssp"
            tools:text="Scorpion" />
    </LinearLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constrainParent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/movieDetailPhoto"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_200sdp"
                    android:alpha="0.7"
                    android:background="?android:selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:contentDescription="@string/app_name"
                    android:focusable="true"
                    android:scaleType="fitXY"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@drawable/scorpion" />

                <LinearLayout
                    android:id="@+id/linear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8sdp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/movieTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_semibold"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_22ssp"
                        android:textStyle="bold"
                        tools:text="Scorpion" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/textCreationCountryGenreAdults"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_medium"
                        android:maxLines="1"
                        android:textColor="@color/colorWhiteDark"
                        android:textSize="@dimen/_13ssp"
                        tools:text="2021, France, Horror, 18+" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/poppins_regular"
                android:maxLines="6"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/constrainParent"
                tools:text="@tools:sample/lorem/random" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/actorsAndCreator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/actors_and_creators"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp"
                app:layout_constraintTop_toBottomOf="@id/overview" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/actorsList"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_120sdp"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/actorsAndCreator"
                tools:listitem="@layout/actor_item" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/langTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/languages"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp"
                app:layout_constraintTop_toBottomOf="@id/actorsList" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/langs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/poppins_regular"
                android:maxLines="6"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/langTitle"
                tools:text="English" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>


    <ProgressBar
        android:id="@+id/detailProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>